--- a/src/BMC.CloudIoT/Shared/MainLayout.razor
+++ b/src/BMC.CloudIoT/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 @inject NavigationManager NavMgr
 @inject IJSRuntime jsRuntime
-<PageTitle>CamObserver.Web</PageTitle>
+<PageTitle>Cloud IoT</PageTitle>
 <AuthControl></AuthControl>
 
 <MudThemeProvider />
@@ -20,7 +20,7 @@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
         <MudDrawerHeader>
-            <MudText Typo="Typo.h6">CamObserver.Web</MudText>
+            <MudText Typo="Typo.h6">Cloud IoT</MudText>
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
