--- a/src/BMC.CloudIoT/Pages/Master/MasterDashboard.razor
+++ b/src/BMC.CloudIoT/Pages/Master/MasterDashboard.razor
@@ -1,4 +1,4 @@
-﻿@page "/master/Project"
+﻿@page "/master/Dashboard"
 
 @inject IJSRuntime jsRuntime
 @inject NavigationManager NavMgr
@@ -7,48 +7,46 @@
 @inject IDialogService DialogService
 @using System.IO
 
-<h1>Daftar Project</h1>
+<h1>Daftar Dashboard</h1>
 
-<p>Gunakan halaman ini untuk melihat info Project.</p>
+<p>Gunakan halaman ini untuk melihat info Dashboard.</p>
 
-@if (DataProject == null)
+@if (DataDashboard == null)
 {
     <p><em>Loading...</em></p>
 }
 else
 {
-    <MudTable Context="item" Items="@DataProject" Dense="@dense" Hover="@hover" Bordered="@bordered" Striped="@striped" Filter="new Func<Project,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
+    <MudTable Context="item" Items="@DataDashboard" Dense="@dense" Hover="@hover" Bordered="@bordered" Striped="@striped" Filter="new Func<Dashboard,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
         <ToolBarContent>
-            <MudText Typo="Typo.h6">Data Project</MudText>
+            <MudText Typo="Typo.h6">Data Dashboard</MudText>
             <MudSpacer />
             <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         </ToolBarContent>
         <HeaderContent>
             <MudTh>Name</MudTh>
-            <MudTh>Pic</MudTh>
+            <MudTh>ChartType</MudTh>
+            <MudTh>DashboardUrl</MudTh>
             <MudTh>Desc</MudTh>
-            <MudTh>Email</MudTh>
-            <MudTh>StartDate</MudTh>
             <MudTh>Actions</MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd DataLabel="Nama">@item.Name</MudTd>
-            <MudTd DataLabel="Pic">@item.Pic</MudTd>
+            <MudTd DataLabel="ChartType">@item.ChartType</MudTd>
+            <MudTd DataLabel="DashboardUrl">@item.DashboardUrl</MudTd>
             <MudTd DataLabel="Desc">@item.Desc</MudTd>
-            <MudTd DataLabel="Email">@item.Email</MudTd>
-            <MudTd DataLabel="StartDate">@item.StartDate?.ToString("dd/MMM/yyyy HH:mm")</MudTd>
             <MudTd DataLabel="Actions">
                 @if (HasLogin)
                 {
-                <MudButton ButtonType="ButtonType.Button" @onclick="(() => PrepareForEdit(item))" DisableElevation="true" Variant="Variant.Filled" Color="Color.Primary" Class="mr-2">Ubah</MudButton>
-                <MudButton ButtonType="ButtonType.Button" @onclick="(() => PrepareForDelete(item))" DisableElevation="true" Variant="Variant.Filled" Color="Color.Error" Class="mr-2">Hapus</MudButton>
+                    <MudButton ButtonType="ButtonType.Button" @onclick="(() => PrepareForEdit(item))" DisableElevation="true" Variant="Variant.Filled" Color="Color.Primary" Class="mr-2">Ubah</MudButton>
+                    <MudButton ButtonType="ButtonType.Button" @onclick="(() => PrepareForDelete(item))" DisableElevation="true" Variant="Variant.Filled" Color="Color.Error" Class="mr-2">Hapus</MudButton>
                 }
-        </MudTd>
-    </RowTemplate>
-    <PagerContent>
-        <MudTablePager />
-    </PagerContent>
-</MudTable>
+            </MudTd>
+        </RowTemplate>
+        <PagerContent>
+            <MudTablePager />
+        </PagerContent>
+    </MudTable>
 
     <div class="d-flex flex-wrap mt-4">
         <MudSwitch @bind-Checked="@hover" Color="Color.Primary">Hover</MudSwitch>
@@ -62,17 +60,17 @@ else
 @if (HasLogin)
 {
     <MudPaper Class="pa-4 mt-4">
-        <MudButton ButtonType="ButtonType.Button" @onclick="(() => InitializeitemObject())" DisableElevation="true" Variant="Variant.Filled" Color="Color.Primary" Class="mr-2">Masukan Project Baru</MudButton>
+        <MudButton ButtonType="ButtonType.Button" @onclick="(() => InitializeitemObject())" DisableElevation="true" Variant="Variant.Filled" Color="Color.Primary" Class="mr-2">Masukan Dashboard Baru</MudButton>
     </MudPaper>
 }
 
 @code {
     bool HasLogin = false;
-    ProjectDetail detail;
-    BMC.CloudIoT.Data.ProjectService service;
+    DashboardDetail detail;
+    BMC.CloudIoT.Data.DashboardService service;
     string customHeader = string.Empty;
-    List<Project> DataProject;
-    Project itemObject = new Project();
+    List<Dashboard> DataDashboard;
+    Dashboard itemObject = new Dashboard();
     [CascadingParameter]
     private Task<AuthenticationState> authenticationStateTask { get; set; }
     string UserName;
@@ -82,13 +80,13 @@ else
     private bool striped = false;
     private bool bordered = false;
     private string searchString1 = "";
-    private Project selectedItem1 = null;
+    private Dashboard selectedItem1 = null;
 
-    private HashSet<Project> selectedItems = new HashSet<Project>();
+    private HashSet<Dashboard> selectedItems = new HashSet<Dashboard>();
 
-    private bool FilterFunc1(Project element) => FilterFunc(element, searchString1);
+    private bool FilterFunc1(Dashboard element) => FilterFunc(element, searchString1);
 
-    private bool FilterFunc(Project element, string searchString)
+    private bool FilterFunc(Dashboard element, string searchString)
     {
         if (string.IsNullOrWhiteSpace(searchString))
             return true;
@@ -96,7 +94,7 @@ else
             return true;
         if (element.Desc.Contains(searchString, StringComparison.OrdinalIgnoreCase))
             return true;
-        if (element.Email.Contains(searchString, StringComparison.OrdinalIgnoreCase))
+        if (element.DashboardUrl.Contains(searchString, StringComparison.OrdinalIgnoreCase))
             return true;
 
         return false;
@@ -127,9 +125,9 @@ else
             HasLogin = true;// Userservice.GetUserRole(UserName) == Roles.Admin;
         }
 
-        if (service == null) service = new ProjectService();
+        if (service == null) service = new DashboardService();
 
-        DataProject = service.GetAllData(UserName);
+        DataDashboard = service.GetAllData(UserName);
 
 
     }
@@ -143,14 +141,14 @@ else
     private async Task InitializeitemObject()
     {
 
-        itemObject = new Project();
+        itemObject = new Dashboard();
         itemObject.Username = UserName;
-        customHeader = "Masukan Project Baru";
+        customHeader = "Masukan Dashboard Baru";
 
         var action = new Action(DataChanged);
         var parameters = new DialogParameters { ["TaskObject"] = itemObject, ["CustomHeader"] = customHeader, ["DataChanged"] = action };
 
-        var dialog = DialogService.Show<ProjectDetail>(customHeader, parameters);
+        var dialog = DialogService.Show<DashboardDetail>(customHeader, parameters);
         var result = await dialog.Result;
 
         if (!result.Cancelled)
@@ -161,18 +159,18 @@ else
     }
     private async void DataChanged()
     {
-        DataProject = service.GetAllData(UserName);
+        DataDashboard = service.GetAllData(UserName);
         StateHasChanged();
     }
 
-    private async Task PrepareForEdit(Project item)
+    private async Task PrepareForEdit(Dashboard item)
     {
-        customHeader = "Ubah Data Project";
+        customHeader = "Ubah Data Dashboard";
         itemObject = item;
         var action = new Action(DataChanged);
         var parameters = new DialogParameters { ["TaskObject"] = itemObject, ["CustomHeader"] = customHeader, ["DataChanged"] = action };
 
-        var dialog = DialogService.Show<ProjectDetail>(customHeader, parameters);
+        var dialog = DialogService.Show<DashboardDetail>(customHeader, parameters);
         var result = await dialog.Result;
 
         if (!result.Cancelled)
@@ -182,7 +180,7 @@ else
         }
 
     }
-    private async Task PrepareForDelete(Project item)
+    private async Task PrepareForDelete(Dashboard item)
     {
         itemObject = item;
         var options = new DialogOptions { CloseOnEscapeKey = true };
@@ -193,8 +191,8 @@ else
         {
             var task = service.DeleteData(itemObject.Id);
             //await jsRuntime.InvokeAsync<object>("CloseModal", "confirmDeleteModal");
-            DataProject = service.GetAllData(UserName);
-            itemObject = new Project() { Id = -1 };
+            DataDashboard = service.GetAllData(UserName);
+            itemObject = new Dashboard() { Id = -1 };
         }
     }
 
