--- a/src/BMC.CloudIoT/Pages/Master/MasterMqttTopic.razor
+++ b/src/BMC.CloudIoT/Pages/Master/MasterMqttTopic.razor
@@ -127,7 +127,7 @@ else
 
         if (service == null) service = new MqttTopicService();
 
-        DataMqttTopic = service.GetAllData();
+        DataMqttTopic = service.GetAllData(UserName);
 
 
     }
@@ -142,7 +142,7 @@ else
     {
 
         itemObject = new MqttTopic();
-
+        itemObject.Username = UserName;
         customHeader = "Masukan MqttTopic Baru";
 
         var action = new Action(DataChanged);
@@ -159,7 +159,7 @@ else
     }
     private async void DataChanged()
     {
-        DataMqttTopic = service.GetAllData();
+        DataMqttTopic = service.GetAllData(UserName);
         StateHasChanged();
     }
     
@@ -191,7 +191,7 @@ else
         {
             var task = service.DeleteData(itemObject.Id);
             //await jsRuntime.InvokeAsync<object>("CloseModal", "confirmDeleteModal");
-            DataMqttTopic = service.GetAllData();
+            DataMqttTopic = service.GetAllData(UserName);
             itemObject = new MqttTopic() { Id = -1 };
         }
     }
