--- a/src/BMC.CloudIoT/Pages/Index.razor
+++ b/src/BMC.CloudIoT/Pages/Index.razor
@@ -1,7 +1,162 @@
 ﻿@page "/"
 
+@inject IJSRuntime jsRuntime
+@inject NavigationManager NavMgr
+@inject IToastService toastService
+@inject DeviceService DeviceSvc
+@inject MqttTopicService MqttTopicSvc
+@inject Blazored.LocalStorage.ILocalStorageService localStorage
+@inject IDialogService DialogService
+
 <PageTitle>Home</PageTitle>
 
 <MudText Typo="Typo.h3" GutterBottom="true">Hello There !</MudText>
 <MudText Class="mb-8">Welcome to Cloud IoT!</MudText>
 <MudAlert Severity="Severity.Normal">Application for managing your IoT Data</MudAlert>
+
+
+<style>
+    .mud-table-cell-custom-group {
+        font-weight: 500;
+    }
+
+    .mud-table-cell-custom-group-footer {
+        padding-bottom: 50px;
+        text-align: right;
+    }
+</style>
+<MudCard class="mt-2">
+    <MudCardHeader>
+        <CardHeaderContent>
+            <MudText Typo="Typo.h5" GutterBottom="true">This is your MQTT Server access:</MudText>
+        </CardHeaderContent>
+    </MudCardHeader>
+    <MudCardContent>
+       <MudTable Hover="true" Breakpoint="Breakpoint.Sm" Height="500px" FixedHeader="true" 
+          Items="@ListTopic"
+          Virtualize="@_virtualize"
+          GroupBy="@_groupDefinition"
+          GroupHeaderStyle="background-color:var(--mud-palette-background-grey)"
+          GroupFooterClass="mb-4"
+          Dense="_dense"
+          MultiSelection="_multiSelect">
+    <ColGroup>
+        @if (_multiSelect)
+        {
+            <col style="width: 60px;" />
+        }
+        @if (_groupDefinition.Expandable)
+        {
+            <col style="width: 60px;" />
+        }
+        <col />
+        <col />
+        <col />
+        <col />
+        <col />
+    </ColGroup>
+    <HeaderContent>
+        <MudTh>Project Name</MudTh>
+        <MudTh>Mqtt-Topic</MudTh>
+        <MudTh>MqttHost</MudTh>
+        <MudTh>MqttPort</MudTh>
+        <MudTh>Username</MudTh>
+        <MudTh>Password</MudTh>
+    </HeaderContent>
+    <GroupHeaderTemplate>
+        <MudTh Class="mud-table-cell-custom-group" colspan="6">@($"{context.GroupName}: {context.Key}")</MudTh>
+        </GroupHeaderTemplate>
+        <RowTemplate>
+            <MudTd DataLabel="Project Name">@context.Project?.Name</MudTd>
+            <MudTd DataLabel="Mqtt-Topic">@context.Topic</MudTd>
+            <MudTd DataLabel="MqttHost">@AppConstants.MqttHost</MudTd>
+            <MudTd DataLabel="MqttPort">@AppConstants.MqttPort</MudTd>
+            <MudTd DataLabel="Username">@("your username")</MudTd>
+            <MudTd DataLabel="Password">@("your password")</MudTd>
+        </RowTemplate>
+        <GroupFooterTemplate>
+            <MudTh Class="mud-table-cell-custom-group mud-table-cell-custom-group-footer" colspan="5">Total Topics: @context.Items.Count()</MudTh>
+        </GroupFooterTemplate>
+        
+    </MudTable>
+
+    <MudSwitch @bind-Checked="_dense" Color="Color.Primary">Dense</MudSwitch>
+    <MudSwitch @bind-Checked="_multiSelect" Color="Color.Primary">MultiSelect</MudSwitch>
+    <MudSwitch @bind-Checked="_virtualize" Color="Color.Primary">Virtualize</MudSwitch>
+    <MudSwitch @bind-Checked="_groupDefinition.Indentation" Color="Color.Primary">Indentation</MudSwitch>
+    <MudSwitch @bind-Checked="_groupDefinition.Expandable" Color="Color.Primary">Expandable</MudSwitch>
+    </MudCardContent>
+    <MudCardActions>
+        
+    </MudCardActions>
+</MudCard>
+    <MudCard class="mt-2">
+    <MudCardHeader>
+        <CardHeaderContent>
+          <MudText Typo="Typo.h5" GutterBottom="true">This is your Device ID for Mqtt access:</MudText>
+        </CardHeaderContent>
+    </MudCardHeader>
+    <MudCardContent>
+     <MudTable Items="ListDevice" Height="350px" Breakpoint="Breakpoint.Sm" Virtualize="true" FixedHeader="true">
+    <HeaderContent>
+        <MudTh>Name</MudTh>
+        <MudTh>MqttClientId</MudTh>
+        <MudTh>Desc</MudTh>
+        <MudTh>DeviceType</MudTh>
+    </HeaderContent>
+    <RowTemplate>
+        <MudTd DataLabel="Name">@context.Name</MudTd>
+        <MudTd DataLabel="MqttClientId">@context.MqttClientId</MudTd>
+        <MudTd DataLabel="Desc">@context.Desc</MudTd>
+        <MudTd DataLabel="DeviceType">@context.DeviceType</MudTd>
+    </RowTemplate>
+</MudTable>
+    </MudCardContent>
+    <MudCardActions>
+        
+    </MudCardActions>
+</MudCard>
+
+    
+   
+    @code{
+    [CascadingParameter]
+    private Task<AuthenticationState> authenticationStateTask { get; set; }
+    string UserName;
+    private bool _dense = false;
+    private bool _multiSelect = true;
+    private bool _virtualize = false;
+    List<Device> ListDevice = new();
+
+
+    private TableGroupDefinition<MqttTopic> _groupDefinition = new()
+        {
+            GroupName = "Project",
+            Indentation = false,
+            Expandable = false,
+            Selector = (e) => e.Project.Name
+        };
+
+    private IEnumerable<MqttTopic> ListTopic = new List<MqttTopic>();
+
+
+    protected override async Task OnInitializedAsync()
+    {
+
+        var user = (await authenticationStateTask).User;
+
+        if (user.Identity.IsAuthenticated)
+        {
+            UserName = user.Identity.Name;
+            ListTopic = MqttTopicSvc.GetAllData(UserName);
+            ListDevice = DeviceSvc.GetAllData(UserName);
+        }
+        else
+        {
+            NavMgr.NavigateTo("/logout", true);   
+        }
+
+
+
+    }
+}
