--- a/src/BMC.CloudIoT/Shared/NavMenu.razor
+++ b/src/BMC.CloudIoT/Shared/NavMenu.razor
@@ -6,4 +6,5 @@
     <MudNavLink Href="/master/Alert" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.CrisisAlert">Alert</MudNavLink>
     <MudNavLink Href="/master/Device" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Thermostat">Device</MudNavLink>
     <MudNavLink Href="/master/MessageStream" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Message">MessageStream</MudNavLink>   
+    <MudNavLink Href="/reports/dashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MultilineChart">My Dashboard</MudNavLink>
 </MudNavMenu>
