--- a/src/BMC.CloudIoT/_Imports.razor
+++ b/src/BMC.CloudIoT/_Imports.razor
@@ -9,6 +9,7 @@
 @using MudBlazor
 @using BMC.CloudIoT
 @using BMC.CloudIoT.Shared
+@using BMC.CloudIoT.Shared.Usercontrols
 @using BMC.CloudIoT.Data
 @using BMC.Models
 @using BMC.CloudIoT.Helpers
